# PMicroProfile

./: .gitignore  LICENSE  README.md  bpftrace_check_kernel_opts.sh  config_tweaks.txt  install-real-machine.sh  install-vm.sh  install.sh  mount-devdax.sh  mount-ext4-dax.sh  open-syslog.sh  setup-vm.sh
archive/bench_tool/: main.cpp
archive/bench_tool/include/: pm_util.hpp
archive/notes/: Meeting April 6.md  mar 2023.md  meeting 31 2023.md
archive/notes/notes_review_paper/: notes.md
archive/trace_extractor/: pmem_trace.py.save
bench_tool/: CMakeLists.txt  benchmarks.cpp  benchmarks.hpp  main.cpp
bench_tool/include/: utils.cpp
debian/: run.sh
debian_small/: run.sh
diagrams/: diag1
drawio/: diagram-pmu  diagsomething  figures_drawio  thesis-literature-study-diagram.drawio
experiments/01-fs-overhead-rw/: plot.py
experiments/01-fs-overhead-rw/nova/: perf.data
experiments/01-fs-overhead-rw/ufs/: 6c112f98.patch
experiments/01-runtime-rand-pmemtrace/: REPRODUCE.md  run.py  run_diff_freq.py  run_no_sampling.py  run_sampling.py
experiments/02-fs-overhead/: REPRODUCE.md  data.csv  plot.py
experiments/02-fs-overhead-filebench-medium/splitfs/: 6c112f98.patch  iomem.txt
experiments/02-fs-overhead/ufs/: iomem.txt
experiments/03-pmemtrace-overhead/: REPRODUCE.md  plot.py  results.csv  run.py  setup.md
experiments/04-ext4-splitfs-baseline/: REPRODUCE.md  run_ext4dax_500M_50_50_rw.sh  run_splitfs_500M_50_50_rw.sh
experiments/04-ext4-splitfs-compare/: REPRODUCE.md  run_ext4dax.sh  run_ext4dax_500M_50_50_rw.sh  run_splitfs.sh  run_splitfs_500M_50_50_rw.sh
experiments/05-ext4-splitfs-varmail/: REPRODUCE.md  run_ext4dax.sh  run_splitfs.sh  varmailsmall.f
experiments/fs-overhead-filebench-medium/ufs/: 6c112f98.cmd  6c112f98.patch
experiments/old/02-fs-overhead-filebench-medium/: data.csv
fedora/: run2.sh
kernels/linux-5.4.232/: .config  .config.old  Module.symvers
kernels/linux-5.4.232/.tmp_630670/: tmp
kernels/linux-5.4.232/drivers/: .built-in.a.cmd  modules.builtin  modules.order
kernels/linux-5.4.232/fs/: .aio.o.cmd  .anon_inodes.o.cmd  .attr.o.cmd  .bad_inode.o.cmd  .binfmt_elf.o.cmd  .binfmt_misc.o.cmd  .binfmt_script.o.cmd  .block_dev.o.cmd  (+60 more)
llvm_patch/: Bye.cpp
notes/: feb 2023.md  mar 2023.md
peak_bw/: pmem_bw_measure  pmem_bw_measure.c
pmemanalyze/: CMakeLists.txt  main.cpp
pmemanalyze/include/: bench_export.hpp  bench_suite.hpp  io.hpp  pmc.hpp  trace.hpp  worker.hpp
pmemanalyze/output/: test_old.csv
pmemanalyze/plot/: asm_test.c  create_figures.py  postprocess.py  setup.py
pmemanalyze/plot/UNKNOWN.egg-info/: SOURCES.txt
pmemanalyze/plot/outfiles/: backup-11_39.csv  backup-16_26.csv  out.csv  out_10_runs_varmail_ext4dax_28_June.csv  out_10_runs_varmail_splitfs_28_June.csv  out_50_runs_varmail_ext4dax_28_June.csv  out_50_runs_varmail_splitfs.csv  out_50_runs_varmail_splitfs_28_June.csv  out_big.csv  out_big_splitfs.csv  out_ext4-50-50-rw.csv  out_ext4_dax_varmail.csv  out_splitfs-50-50-rw.csv  out_splitfs_varmail.csv
pmemanalyze/src/: bench_export.cpp  bench_suite.cpp  pmc.cpp  trace.cpp
pmemreplay/: CMakeLists.txt  bench_export.cpp  bench_suite.cpp  bench_suite.hpp  create_figures.py  main.cpp  pmc.cpp  pmc.hpp  trace.cpp  trace.hpp  worker.hpp
pmemreplay/include/: bench_suite.hpp  io.hpp  pmc.hpp  trace.hpp  worker.hpp
pmemreplay/output/: first_test.csv  test.csv
pmemreplay/src/: bench_export.cpp  bench_suite.cpp  bench_suite.cpp.save  pmc.cpp  trace.cpp
pmemtrace/: CMakeLists.txt  Makefile  pmemtrace  pmemtrace.c  pmemtrace.cpp  read_trace.py  tracecompress.cpp
splitfs/filebench/: config.h  config.status  filebench
splitfs/fio/: FIO-VERSION-FILE  config-host.h  config-host.mak  lex.yy.c  y.tab.c  y.tab.h
splitfs/micro/: rm_expt
splitfs/rsync/: syscall.c
splitfs/splitfs/: bg_clear_mmap.h  common.mk  debug.c  debug.h  fileops_nvp.c  ledger.c  ledger.h  log.c  log.h  lru_cache.c  lru_cache.h  non_temporal.c  non_temporal.h  nv_common.c  nv_common.h  nvp_printf.c  queue_impl.c  queue_impl.h  run_boost.sh  stack.c  stack.h  timers.c  timers.h
trace_extractor/: plot_trace.py  pmem_trace.py
tracer/: Makefile  tracer  tracer.c
ubuntu/: run.sh
ubuntu_ctfs/: run.sh  run_stock_kernel.sh
ubuntu_splitfs/: run.sh
vm/: .config.backup  run_cascadelake.sh  run_kvm.sh  run_stock_kernel.sh
(+2682 files in other folders)
